1.0.0.0-alpha-1: Working library and (limited) UI.